<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_blank_fragment">你好</string>


    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="pay_password">支付密码</string>
    <string name="pay_confirm">确认支付密码</string>
    <string name="register_regist">注册</string>
    <string name="register_phone_num">手机号码</string>
    <string name="register_verify_code">短信验证码</string>
    <string name="register_confirm">确认密码</string>
    <string name="manage2_name">收货人姓名</string>
    <string name="manage2_tel">电话号码</string>
    <string name="manage2_email">Email</string>
    <string name="manage2_phone">手机号码</string>
    <string name="manage2_address">详细地址</string>
    <string name="address_tel">电话号码 (选填)</string>
    <string name="address_area">所在地区</string>
    <string name="save">保存</string>
    <string name="address_address">详细地址(必填)</string>
    <string name="address_add">添加地址</string>
    <string name="address_phone">手机号码 (必填)</string>
    <string name="address_consignee">收货人姓名(必填)</string>
    <string name="tradeitem_number">订单编号</string>
    <string name="tradeitem_rental">总额</string>
    <string name="non_address">您还没有添加收货地址</string>
    <string name="text_toast">设置成功，免打扰时段为：\n%1$s - %2$s</string>
    <string name="app_name">泰润商城</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">   请输入搜索内容</string>
    <string name="exit">注销</string>
    <string name="typetext">分类</string>
    <string name="saotext">扫啊扫</string>

    <!-- 购物车 -->
    <string name="cart">购物车</string>
    <string name="cartinfo_no">您的购物车是空的，快去选购吧！</string>
    <string name="cartinfo_synchronous">购物车同步中</string>
    <string name="cart_logininfo">您可以在登录后系统后同步电脑与手机购物车中的商品</string>
    <string name="cart_market">购物广场</string>
    <!-- 订单 -->
    <string name="tradeitem_time">下单时间</string>
    <string name="store_name">店铺名称</string>
    <string name="balance_receiver">收件人</string>
    <string name="balance_address">收件地址:</string>
    <string name="balance_pay">支付方式</string>
    <string name="balance_shipping">配送方式</string>
    <string name="balance_bill">发票信息</string>
    <string name="balance_list">商品清单</string>
    <string name="balance_redpocket">红包</string>
    <string name="balance_exp">积分</string>
    <string name="balance_detail">订单明细</string>
    <string name="balance_transportation">运输费</string>
    <string name="balance_rental">总额：</string>
    <string name="balance_submit">提交订单</string>
    <string name="balance_cancel">取消订单</string>
    <string name="required">必填</string>
    <!-- 首页 -->
    <string name="index_limit">还剩</string>
    <string name="index_hour">时</string>
    <string name="index_min">分</string>
    <string name="index_seconds">秒</string>
    <string name="index_price">秒杀价:</string>
    <string name="index_raw_price">原价:</string>
    <string name="index_slogan">疯狂秒杀</string>
    <string name="index_promotion">促销卖场</string>
    <string name="index_recharge">充值</string>
    <string name="index_group_buy">团购</string>
    <string name="index_lottery">彩票</string>
    <string name="index_shake">摇一摇</string>
    <string name="index_order">订单状态</string>
    <string name="index_history">浏览历史</string>
    <string name="index_collect">我的关注</string>
    <string name="index_life_journey">生活娱乐</string>
    <string name="index_notify_info">向左滑，更多优惠等你抢</string>
    <string name="index_shopping_jinqiufengbao">金秋风暴</string>
    <string name="index_shopping_remenyouhui">热门特惠</string>
    <!-- 首页 -->
    <string name="back_exit_tips">再按一次退出应用</string>
    <string name="university">首页</string>
    <string name="important_news">要闻</string>
    <string name="association_msg">社团信息</string>
    <string name="campus">乐活</string>
    <string name="me">我</string>
    <string name="my_home">我</string>
    <string name="fragment">碎片</string>
    <string name="attention">关注</string>
    <string name="add_attention">+ 关注</string>
    <string name="fans">粉丝</string>
    <string name="message">消息</string>
    <string name="recommend">推荐给好友</string>
    <string name="suggest">建议与反馈</string>
    <string name="update">版本更新</string>
    <string name="change_number">切换账号</string>
    <string name="login">登陆</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="login_account_hint">泰润商城账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_forgotpassword_hint">忘记密码？</string>
    <string name="login_useother_hint">使用社交账号登陆</string>
    <string name="register_useother_hint">使用社交账号注册</string>
    <string name="register">注册</string>
    <string name="inout_number">请输入手机号码</string>
    <string name="inout_captcha">请输入验证码</string>
    <string name="resend">重发</string>
    <string name="back">上一步</string>
    <string name="next">下一步</string>
    <string name="skip">跳过</string>
    <string name="request_failed">未知错误，请重试</string>
    <string name="password_failed">密码错误</string>
    <string name="login_success">登陆成功</string>
    <string name="token_failed">自动登录过期，请重新登录</string>
    <string name="number_error">请输入正确的手机号码</string>
    <string name="captcha_error">验证码错误，请重新输入</string>
    <string name="verification_send">我们已把验证码短信发送到%1$s</string>
    <string name="prompt_hint">在商家附近？立刻找出你的商家</string>
    <string name="get_nearby_schools">获取附近商家</string>
    <string name="college_search_hint">请输入商家名称或拼音</string>
    <string name="all_province">全国省市</string>
    <string name="input_nickname_hint">请输入您的昵称</string>
    <string name="set_password_hint">请设置登陆密码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">%1$s前</string>
    <string name="updated_just_now">刚刚</string>
    <string name="time_error">时间有问题</string>
    <string name="loding_text">正在加载中....</string>
    <string name="networkException">网络异常，点击这里重新加载</string>
    <string name="get_informationData_failure">获取网络数据失败</string>
    <string name="informationText">原文</string>
    <string name="get_comment_failure">获取评论失败</string>
    <string name="update_campus_failure">更新校园功能列表失败</string>
    <string name="load_more">正在加载更多…</string>
    <string name="load_finish">已加载全部数据</string>
    <string name="reload">轻触屏幕，重新加载</string>
    <string name="content_null">内容不能为空</string>

    <string name="add_address">新增收货地址</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">修改失败</string>

</resources>