<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">
    <!-- 320dp -->
    <EditText
        android:id="@+id/login_userid_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_login_user_account"
        android:drawablePadding="10dp"
        android:hint="@string/login_account_hint"
        android:inputType="textEmailAddress"
        android:maxLength="64"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/grey2"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />

    <View
        style="@style/horizontal_cut_line"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/login_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:drawableLeft="@drawable/icon_login_password"
        android:drawablePadding="10dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLength="64"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/grey2"
        android:textColorHint="@color/grey"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/login_register_btn"
            android:text="@string/register"
            android:textColor="@color/sky_blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/green_btn"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
    <!--
        <TextView
            android:id="@+id/forgotpassword_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:text="@string/login_forgotpassword_hint"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_useother_hint"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/qq_login_imageView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_login_tencent_seleted" />

            <ImageView
                android:id="@+id/sina_login_imageView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20.0dip"
                android:src="@drawable/btn_login_sina_selected" />
        </LinearLayout> -->

</LinearLayout>