<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include layout="@layout/item_title_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_background">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/body_cont"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <!-- 用户名 -->
                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/login_username"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <!-- 密码 -->
                <EditText
                    android:id="@+id/register_password1"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <!-- 确认密码 -->
                <EditText
                    android:id="@+id/register_password2"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/register_confirm"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <!-- 支付密码 -->
                <EditText
                    android:id="@+id/pay_password1"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/pay_password"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <!-- 确认支付密码 -->
                <EditText
                    android:id="@+id/pay_password2"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/pay_confirm"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />


                <!-- 手机号 -->
                <EditText
                    android:id="@+id/register_phone_num"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/register_phone_num"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.1dp"
                    android:background="#c4c4c4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    >
                    <!-- 验证码-->
                    <EditText
                        android:id="@+id/register_verify_code"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:background="#ffffff"
                        android:gravity="center_vertical"
                        android:inputType="number"
                        android:hint="@string/register_verify_code"
                        android:maxLength="6"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/register_getcode"
                        android:clickable="true"
                        android:gravity="center"
                        android:textColor="@color/red_text_color"
                        android:layout_width="0dp"
                        android:layout_margin="5dp"
                        android:layout_height="40dp"
                        android:maxLines="1"
                        android:text="获取验证码"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        />

                </LinearLayout>


            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="10dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:orientation="horizontal">-->

                <!--&lt;!&ndash; 注册码 &ndash;&gt;-->
                <!--<ImageView-->
                    <!--android:id="@+id/register_code_image"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="换一张"-->
                    <!--android:textColor="#ffffff"-->
                    <!--android:textSize="16sp" />-->

                <!--&lt;!&ndash;  输入验证码 &ndash;&gt;-->
                <!--<EditText-->
                    <!--android:id="@+id/register_code_edittext"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="#ffffff"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:hint="输入验证码"-->
                    <!--android:maxLength="20"-->
                    <!--android:paddingLeft="10dp"-->
                    <!--android:paddingRight="10dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:textColor="#000000"-->
                    <!--android:textSize="16dp" />-->

                <!--&lt;!&ndash; 点击换一张验证码 &ndash;&gt;-->
                <!--<Button-->
                    <!--android:id="@+id/register_code_button"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:background="@color/orange"-->
                    <!--android:text="换一张"-->
                    <!--android:textColor="#ffffff"-->
                    <!--android:textSize="16sp" />-->
            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/register_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="阅读并同意" />

                <TextView
                    android:id="@+id/register_agreement_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户服务协议"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/register_register"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center"
                android:layout_margin="10dp"
                android:background="@color/red_text_color"
                android:text="@string/register_regist"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/register_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/body_cont"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone"></LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>